[package]
name = "echo"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "echo"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.2"
derive_builder = "0.12.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
